# metplot-agent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/super-board/configs/: metplot-agent.json
docs/: REAL_FILES_SETUP.md  adding-targets.md  architecture.md  dogfood-tester-guide.md  installation.md  self-improvement.md  style_template_extraction_prompt.md  tester-guide.md  user-guide.md
docs/architecture/: ssh-broker.md
docs/plans/: 2026-05-06-cycle-1-netcdf-reader.md  2026-05-07-cycle-2-plot-renderer.md  2026-05-07-cycle-3-plot-skills.md  2026-05-08-cycle-4-claude-code.md  2026-05-08-cycle-5-auto-setup.md  2026-05-08-cycle-6-self-improvement-loop.md  2026-05-08-cycle-7-multi-host-targets.md  2026-05-11-cycle-6-task-3-dogfood-unblockers.md
docs/research/: 2026-05-08-cycle-6-dogfood-findings.md  2026-05-08-multi-host-survey.md  2026-05-08-plugin-install-hooks.md  2026-05-08-slash-command-namespacing.md  2026-05-11-cycle-8-library-survey.md  2026-05-12-cycle-10-real-data-findings.md  2026-05-12-tester-guide-pass-v2.md  2026-05-12-tester-guide-pass-v3.md
docs/specs/: 2026-05-06-cycle-1-netcdf-reader.md  2026-05-07-cycle-2-plot-renderer.md  2026-05-07-cycle-3-plot-skills.md  2026-05-08-cycle-4-claude-code.md  2026-05-08-cycle-5-auto-setup.md  2026-05-08-cycle-6-self-improvement-loop.md  2026-05-08-cycle-7-multi-host-targets.md  2026-05-11-cycle-8-unstructured-mesh-plotting.md  2026-05-12-cycle-10-robustness-and-e3sm-coverage.md  2026-05-12-cycle-11-unstructured-timeseries-and-profile.md  2026-05-12-cycle-12-ncks-parity.md  2026-05-12-cycle-13-bundled-followons.md  2026-05-12-cycle-14-ssh-broker.md  2026-05-12-cycle-9-cice-eamxx-physics-grids.md
docs/super-board/: PROJECT.md  pre-flight.md
docs/super-board/runs/: 2026-06-16-metplot-agent.md
docs/superpowers/plans/: 2026-05-12-cycle-14-ssh-broker.md  2026-05-13-ssh-broker-user-at-host.md
docs/superpowers/specs/: 2026-05-12-ssh-broker-user-at-host-design.md
src/data/: regions.json
src/mcp/netcdf-reader/: README.md  pyproject.toml
src/mcp/netcdf_reader/: README.md  adapter.py  cache.py  cdl_parser.py  envelope.py  lifecycle.py  protocols.py  pyproject.toml  regions.py  schemas.py  sections.py  selectors.py  selectors_unstructured.py  server.py
src/mcp/netcdf_reader/conventions/: cf.py  cice.py  cpl.py  eamxx.py  elm.py  mpas.py  roms.py  wrf.py
src/mcp/netcdf_reader/paths/: classify.py  mesh_pair.py  multi_file.py  ssh.py  ssh_broker.py
src/mcp/netcdf_reader/tools/: compute_stats.py  dump_cdl.py  find.py  inspect.py  peek.py  read_slice.py  reduce_variable.py  resolve_spec.py  transforms.py
src/mcp/plot-renderer/: README.md  pyproject.toml
src/mcp/plot_renderer/: README.md  __init__.py  adapter.py  colormap_registry.py  defaults.py  envelope.py  lifecycle.py  oracle.py  protocols.py  pyproject.toml  safety.py  schemas.py  server.py  slice_loader.py  style.py
src/mcp/plot_renderer/tools/: render_map.py  render_profile.py  render_section.py  render_timeseries.py
src/skills/netcdf-analyze/: SKILL.md
src/skills/netcdf-inspect/: SKILL.md
src/skills/netcdf-plot-cross-section/: SKILL.md
src/skills/netcdf-plot-map/: SKILL.md
src/skills/netcdf-plot-profile/: SKILL.md
src/skills/netcdf-plot-router/: SKILL.md
src/skills/netcdf-plot-timeseries/: SKILL.md
src/skills/netcdf-remote/: SKILL.md
src/skills/skill-refiner/: SKILL.md
src/ssh_broker/: __init__.py  cli.py  exec_policy.py  methods.py  protocol.py  server.py  session_holder.py
targets/: __init__.py
targets/_common/: __init__.py  install_tooling.py  manifest.py  mcp_bundling.py  setup_descriptions.py  setup_sh.py  skills.py
targets/antigravity/: build.py
targets/claude-code/: README.md  build.py
targets/claude-desktop/: README.md  build.py
targets/codex/: README.md  build.py
targets/copilot/: build.py
targets/copilot-cli/: build.py
targets/cursor/: build.py
targets/gemini-cli/: build.py
targets/hermes/: README.md  build.py
tests/: conftest.py  test_skills_format.py
tests/docs/: test_installation_doc.py
tests/mcp/: test_issue_34_qa.py
tests/mcp/netcdf_reader/: REAL_SSH_SETUP.md  conftest.py
tests/mcp/plot_renderer/: conftest.py
tests/skills/: __init__.py  _skill_helpers.py  conftest.py  test_aliases_format.py  test_colormaps_schema.py  test_regions_schema.py  test_regions_sync.py  test_skill_cross_refs.py  test_skill_frontmatter.py  test_skill_sections.py  test_skill_style_section.py  test_skill_tool_refs.py  test_task_log_format.py
tests/skills/integration/: test_map_flow.py
tests/ssh_broker/: conftest.py
tests/ssh_broker/integration/: test_channel_state_machine.py  test_connection_lost.py  (+4 more)
tests/targets/: test_all_targets_buildable.py  test_all_targets_have_setup.py  test_skill_refiner_cross_host.py
tests/tools/: test_apply_refinements.py  test_build_dispatcher.py  test_install_deps_args.py  test_install_deps_dry_run.py  test_install_deps_env.py  test_install_deps_launchers.py  test_install_deps_main.py  test_install_deps_plan.py  test_install_deps_real.py
tools/: apply_refinements.py  build.py  install_deps.py  lint_skills.py
(+197 files in other folders)
