[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncplot-agent"
version = "0.1.0"
description = "Multi-target AI agent plugin for NetCDF plotting with self-improving skills"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ncplot-agent contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "pyyaml>=6.0",
  "click>=8.1",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0",
  "xarray>=2024.1",
  "netcdf4>=1.6",
  "numpy>=1.24",
  "matplotlib>=3.8",
  "cartopy>=0.22",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "mypy>=1.8",
]

[project.scripts]
ncplot-build = "tools.build:cli"
ncplot-lint = "tools.lint_skills:cli"
ncplot-refine = "tools.apply_refinements:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
exclude = "src/mcp/netcdf_reader/pyproject.toml|src/mcp/plot-renderer|src/mcp/netcdf-reader"
