[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metplot-agent"
version = "0.1.0"
description = "Multi-target AI agent plugin for NetCDF plotting with self-improving skills"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "metplot-agent contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "pyyaml>=6.0",
  "click>=8.1",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0",
  "xarray>=2024.1",
  "netcdf4>=1.6",
  "numpy>=1.24",
  "matplotlib>=3.8",
  "cartopy>=0.22",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "mypy>=1.8",
]
# Cycle-8 Phase A research deps. Candidate libraries the
# library-survey doc identified, installed for PoC validation
# against the dogfood files. Phase B will pick one and move it into
# `mcp` (since plot-renderer will import it at runtime); this group
# goes away at that point.
#
# NB: `mpas_tools` is conda-forge-only as of May 2026 (not on PyPI);
# the matplotlib `tripcolor` secondary PoC vendors the
# Voronoi-fan-to-triangulation logic by hand instead.
cycle8-poc = [
  "uxarray>=2026.04",
  "datashader>=0.19",
]

[project.scripts]
metplot-build = "tools.build:cli"
metplot-lint = "tools.lint_skills:cli"
metplot-refine = "tools.apply_refinements:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "src*", "targets*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E702"]
"**/conftest.py" = ["E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
    "image_diff: run only when --image-diff is passed",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
exclude = "src/mcp/netcdf_reader/pyproject.toml|src/mcp/plot-renderer|src/mcp/netcdf-reader|^build/"

# cartopy doesn't ship type stubs as of May 2026.
[[tool.mypy.overrides]]
module = ["cartopy", "cartopy.*"]
ignore_missing_imports = true
